# opengl

./: .gitignore
1-start/: CMakeLists.txt
1-start/src/: main.cpp
10-framebuffer/: CMakeLists.txt
10-framebuffer/src/: main.cpp
10-framebuffer/utils/: camera.h  shader.cpp  shader.h
11-model/: CMakeLists.txt
11-model/glad/src/: glad.c
11-model/mesh/: mesh.h
11-model/model/: model.h
11-model/src/: main.cpp
11-model/utils/: camera.h  shader.h
2-window/src/: main.cpp
3-triangle/: CMakeLists.txt  build.sh
3-triangle/src/: exercise1.cpp  exercise2.cpp  exercise3.cpp  main.cpp
4-shaders/: CMakeLists.txt
4-shaders/glad/src/: glad.c
4-shaders/shader/: shader.cpp  shader.h
4-shaders/shader_src/: shader.fs  shader.vs
4-shaders/src/: main.cpp
5-texture/: CMakeLists.txt
5-texture/shader_src/: shader.fs  shader.vs
5-texture/src/: main.cpp
6-transformation/: CMakeLists.txt  build.sh
6-transformation/shader_src/: shader.fs  shader.vs
6-transformation/src/: main.cpp
7-coordinate/src/: main.cpp
8-camera/: CMakeLists.txt
8-camera/glad/include/glad/: glad.h
8-camera/shader_src/: shader.fs  shader.vs
8-camera/src/: main.cpp
8-camera/utils/: camera.h  shader.h
9-colors/shader_src/: colors.fs  colors.vs  light_cube.fs
9-colors/src/: main.cpp
9-colors/utils/: camera.cpp  shader.cpp  shader.h
